<package>
  <name>wibotic_gazebo</name>
  <version>2.2.3</version>
  <description>Gazebo launchers and worlds for WiBotic simulation</description>

  <license>BSD</license>

  <author email="info@wibotic.com">WiBotic</author>
  <maintainer email="info@wibotic.com">WiBotic</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>turtlebot_gazebo</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>wibotic_models</run_depend>
  <run_depend>wibotic_gazebo_plugins</run_depend>
</package>